--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "react-router-dom": "^6.21.3"
   }
 }
