--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "serve": "tsx watch src/server.ts",
-    "dev": "concurrently --names SERVER,CLIENT --prefix-colors blue,magenta --kill-others \"npm run serve\" \"cd client && npm run dev\"",
-    "prepare": "husky"
+    "dev": "concurrently --names SERVER,CLIENT --prefix-colors blue,magenta --kill-others \"npm run serve\" \"cd client && npm run dev\""
   },
   "repository": {
     "type": "git",
@@ -33,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "fastify": "^4.25.2",
-    "husky": "^9.0.6",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "tsx": "^4.7.0",
