--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preline/dropdown": "^2.0.2",
     "axios": "^1.6.5",
     "preline": "^2.0.3",
     "react": "^18.2.0",
