--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@preline/dropdown": "^2.0.2",
     "axios": "^1.6.5",
+    "dotenv": "^16.4.2",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
