--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preline/collapse": "^2.0.2",
     "@preline/dropdown": "^2.0.2",
     "axios": "^1.6.5",
     "dotenv": "^16.4.2",
