feat: Refatorar estilo dos botões e configurações de variantes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,6 @@
   },
   "plugins": ["react-refresh"],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "react/react-in-jsx-scope": "off"
   }
 }
