--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "tailwind-variants": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.7",
