--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "dotenv": "^16.4.2",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "mongodb": "^6.3.0"
   }
 }
