--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   },
   "plugins": ["react-refresh"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
