--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "tailwind-variants": "^0.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
